--- a/templates/catalogtest.html
+++ b/templates/catalogtest.html
@@ -22,11 +22,12 @@
             <div class="col-sm-3">
                 <h4>Categories</h4>
                 <div class="list-group">
-                    {% for category in catalog %}
-                    <a href="#"
-                    class="list-group-item">
-                    {{category.name}}<span class="badge">5</span></a>
-                    {% endfor %}
+                    <a href="#" class="list-group-item active">
+                        First item<span class="badge">5</span></a>
+                    <a href="#" class="list-group-item">
+                        Second item<span class="badge">7</span></a>
+                    <a href="#" class="list-group-item">
+                        Third item<span class="badge">15</span></a>
                 </div>
             </div>
 
