--- a/templates/description.html
+++ b/templates/description.html
@@ -23,18 +23,20 @@
             <div class="col-sm-1"></div>
             <div class="col-sm-10">
                 <div class="jumbotron">
-                    <h4>Category: {{category.name}}</br>
-                        Title: {{item.name}}</br>
+                    <h4 class="text-center">Category: {{category.name}}</br></h4>
+                        <h4>Title: {{item.name}}</br>
                         Author: {{item.author}}</h4>
                         <p style="font-size:16px;">{{item.description}}</p>
+                        </br></br>
+                        <button type="button" class="btn btn-default">Edit</button>
                 </div>
-            <div class="col-sm-1"></div>
+            </div>
         </div>
 
-        <ul class="pager">
-            <li class="previous">
-                <a href="{{url_for('showItems', category_id = category.id )}}">Return</a>
-            </li>
-        </ul>
+            <ul class="pager">
+                <li class="previous">
+                    <a href="{{url_for('showItems', category_id = category.id )}}">Return</a>
+                </li>
+            </ul>
 </body>
 </html>
