--- a/templates/descriptionPublic.html
+++ b/templates/descriptionPublic.html
@@ -22,24 +22,19 @@
         <div class="p-5 row">
             <div class="col-sm-1"></div>
             <div class="col-sm-10">
- <div class="jumbotron">
-<h4>Category: Psychology</br>
-Title: 1984</br>
-Author: R.Orwell</h4>
-<p style="font-size:16px;">
-Bootstrap is the most popular HTML, CSS, and JS framework for developing
-responsive, mobile-first projects on the web.</p>
-
+                <div class="jumbotron">
+                    <h4 class="text-center">Category: {{category.name}}</br></h4>
+                        <h4>Title: {{item.name}}</br>
+                        Author: {{item.author}}</h4>
+                        <p style="font-size:16px;">{{item.description}}</p>
+                </div>
             </div>
-            <div class="col-sm-1"></div>
         </div>
 
-
-
-
-    </div>
-    <ul class="pager">
-     <li class="previous"><a href="#">Previous</a></li>
-    </ul>
+            <ul class="pager">
+                <li class="previous">
+                    <a href="{{url_for('showItems', category_id = category.id )}}">Return</a>
+                </li>
+            </ul>
 </body>
 </html>
