--- a/templates/addBook.html
+++ b/templates/addBook.html
@@ -23,13 +23,20 @@
             <div class="col-sm-1"></div>
             <div class="col-sm-10">
                 <div class="jumbotron">
-                    <h4 class="text-center">Category: {{category.name}}</br></h4>
-                        <h4>Title: {{item.name}}</br>
-                        Author: {{item.author}}</h4>
-                        <p style="font-size:16px;">{{item.description}}</p>
-                        </br></br>
-                        <a href="#" role="button" class="btn btn-default">Edit</a>
-                        <a href="#" role="button" class="btn btn-default">Delete</a>
+                    <h4 class="text-left">Category:Physic</h4></br>
+                    <form action="/action_page.php">
+                        <div class="form-group">
+                            <label for="email">Book Name</label></br>
+                            <input type="email" class="form-control" id="email">
+                            <label for="email">Author</label></br>
+                            <input type="email" class="form-control" id="email">
+                            <label for="comment">Description</label>
+                            <textarea class="form-control" rows="5" id="comment"></textarea>
+                        </div>
+
+                    </br>
+                        <button type="submit" class="btn btn-default">Add Book</button>
+                    </form>
                 </div>
             </div>
         </div>
