--- a/templates/addCategory.html
+++ b/templates/addCategory.html
@@ -1,3 +1,4 @@
+{% block content %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -23,21 +24,17 @@
             <div class="col-sm-1"></div>
             <div class="col-sm-10">
                 <div class="jumbotron">
-                    <h4 class="text-center">Category: {{category.name}}</br></h4>
-                        <h4>Title: {{item.name}}</br>
-                        Author: {{item.author}}</h4>
-                        <p style="font-size:16px;">{{item.description}}</p>
-                        </br></br>
-                        <a href="#" role="button" class="btn btn-default">Edit</a>
-                        <a href="#" role="button" class="btn btn-default">Delete</a>
+                    <h4 class="text-center">New Category </br></h4>
+                    <form action="#" method = "post">
+                        <div class="form-group">
+                            <label for="email">Category Name</label></br>
+                            <input type ="text" class="form-control" maxlength="150" name="name">
+                        </div></br>
+                        <button type="submit" class="btn btn-default" id="submit" type="submit">Submit</button>
+                    </form>
                 </div>
             </div>
         </div>
-
-            <ul class="pager">
-                <li class="previous">
-                    <a href="{{url_for('showItems', category_id = category.id )}}">Return</a>
-                </li>
-            </ul>
 </body>
 </html>
+{% endblock %}
