--- a/templates/editCategory.html
+++ b/templates/editCategory.html
@@ -23,13 +23,14 @@
             <div class="col-sm-1"></div>
             <div class="col-sm-10">
                 <div class="jumbotron">
-                    <h4 class="text-center">Category: {{category.name}}</br></h4>
-                        <h4>Title: {{item.name}}</br>
-                        Author: {{item.author}}</h4>
-                        <p style="font-size:16px;">{{item.description}}</p>
-                        </br></br>
-                        <a href="#" role="button" class="btn btn-default">Edit</a>
-                        <a href="#" role="button" class="btn btn-default">Delete</a>
+                    <h4 class="text-center">Category : physic  </br></h4>
+                    <form action="/action_page.php">
+                        <div class="form-group">
+                            <label for="email">Edit Name</label></br>
+                            <input type="email" class="form-control" id="email">
+                        </div></br>
+                        <button type="submit" class="btn btn-default">Save Change</button>
+                    </form>
                 </div>
             </div>
         </div>
