--- a/templates/addCategory.html
+++ b/templates/addCategory.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  	<link rel=stylesheet type=text/css href="{{ url_for('static', filename='styles.css') }}">
 </head>
 <body>
     <div class="container">
@@ -35,6 +36,12 @@
                 </div>
             </div>
         </div>
+        <ul class="pager">
+            <li class="previous">
+                <a href="{{url_for('showCategories')}}"><h4>Return</h4></a>
+            </li>
+        </ul>
+    </div>
 </body>
 </html>
 {% endblock %}
