--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -1,32 +1,32 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <title>Catalog App</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-</head>
-<body>
-    <div class="container">
+{% extends "main.html" %}
+{% block content %}
+
+{% set active_category_id = [] %}
+{% set active_category_name =[] %}
+    {% for category in catalog %}
+        {% if index == category.id  %}
+            {% set _ = active_category_id.append(category.id)%}
+            {% set _ = active_category_name.append(category.name)%}
+        {% endif %}
+{% endfor %}
+
         <div class="jumbotron">
             <h1>Book Catalog</h1>
             <p>Library catalog systems</p>
         </div>
 
         <div class="well">
-            <h4 class="text-right">Login</h4>
+            <h2 class="text-left">Category : {{active_category_name[0]}}</h2>
         </div>
 
         <div class = 'flash'>
-        		      {% with messages = get_flashed_messages() %}
-              {% if messages %}
-                <ul>
-                {% for message in messages %}
-                    <li> <strong> {{ message }} </strong> </li>
-                {% endfor %}
-                </ul>
+        	{% with messages = get_flashed_messages() %}
+                {% if messages %}
+                    {% for message in messages %}
+                        <div class="alert alert-info">
+                            <strong> {{ message }}</strong>
+                        </div>
+                    {% endfor %}
                 {% endif %}
             {% endwith %}
         </div>
@@ -35,7 +35,7 @@
             <div class="col-sm-4">
                 <div class="btn-group btn-group-justified">
                     <a href="{{url_for('newCategory')}}" class="btn btn-default">ADD</a>
-                    <a href="#" class="btn btn-default">EDIT</a>
+                    <a href="{{url_for('editCategory', category_id = active_category_id[0])}}" class="btn btn-default">EDIT</a>
                     <a href="#" class="btn btn-default" data-toggle="modal" data-target="#myModal">DELETE</a>
                 </div>
             </br>
@@ -53,6 +53,7 @@
         </div>
 
         <div class="col-sm-8">
+            <h4> Test </h4>
             <table class="table table-hover">
                 <thead>
                   <tr>
@@ -82,34 +83,30 @@
 
     <!-- Modal -->
     <div id="myModal" class="modal fade" role="dialog">
-      <div class="modal-dialog">
-
-        <!-- Modal content-->
-        <div class="modal-content">
-          <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal">&times;</button>
-            <h4 class="modal-title">Delete Category</h4>
-          </div>
-          <div class="modal-body">
-            <p>WARNING : Delete will erase category {{catalog[index-1].name}}
-                with all the books stored in it </p>
-          </div>
-          <div class="modal-footer">
-              <form class="form-inline" action="{{url_for('deleteCategory', category_id = index )}}"  method = "post">
-                  <button type="submit" class="btn btn-danger" id="submit" type="submit">Delete</button>
-                  <button type="button" class="btn btn-default" data-dismiss="modal">Return</button>
-              </form>
-          </div>
-      </div>
-
-      </div>
+        <div class="modal-dialog">
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <h4 class="modal-title">Delete Category</h4>
+                </div>
+                <div class="modal-body">
+                    <p>WARNING : Delete will erase category {{active_category_name[0]}}
+                    with all the books stored in it </p>
+                </div>
+                <div class="modal-footer">
+                    <form class="form-inline" action="{{url_for('deleteCategory', category_id = index )}}"  method = "post">
+                    <button type="submit" class="btn btn-danger" id="submit" type="submit">Delete</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Return</button>
+                    </form>
+                </div>
+            </div>
+        </div>
     </div>
-
 
 <script>
 $(document).ready(function(){
     $('[data-toggle="tooltip"]').tooltip();
 });
 </script>
-</body>
-</html>
+{% endblock %}
