--- a/templates/addCategory.html
+++ b/templates/addCategory.html
@@ -1,17 +1,5 @@
+{% extends "main.html" %}
 {% block content %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <title>Catalog App</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  	<link rel=stylesheet type=text/css href="{{ url_for('static', filename='styles.css') }}">
-</head>
-<body>
-    <div class="container">
         <div class="jumbotron">
         <h1>Book Catalog</h1>
         <p>Library catalog systems</p>
@@ -34,14 +22,11 @@
                         <button type="submit" class="btn btn-default" id="submit" type="submit">Submit</button>
                     </form>
                 </div>
+                <ul class="pager">
+                    <li class="previous">
+                        <a href="{{url_for('showCategories')}}"><h4>Return</h4></a>
+                    </li>
+                </ul>
             </div>
         </div>
-        <ul class="pager">
-            <li class="previous">
-                <a href="{{url_for('showCategories')}}"><h4>Return</h4></a>
-            </li>
-        </ul>
-    </div>
-</body>
-</html>
 {% endblock %}
