--- a/templates/editCategory.html
+++ b/templates/editCategory.html
@@ -1,15 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <title>Catalog App</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-</head>
-<body>
-    <div class="container">
+{% extends "main.html" %}
+{% block content %}
         <div class="jumbotron">
         <h1>Book Catalog</h1>
         <p>Library catalog systems</p>
@@ -23,22 +13,20 @@
             <div class="col-sm-1"></div>
             <div class="col-sm-10">
                 <div class="jumbotron">
-                    <h4 class="text-center">Category : physic  </br></h4>
-                    <form action="/action_page.php">
+                    <h4 class="text-center">Category : {{category_name}} </br></h4>
+                    <form action="#" method = "post">
                         <div class="form-group">
-                            <label for="email">Edit Name</label></br>
-                            <input type="email" class="form-control" id="email">
+                            <label for="email">>Edit Name</label></br>
+                            <input type ="text" class="form-control" maxlength="150" name="name" value ={{category_name}} >
                         </div></br>
-                        <button type="submit" class="btn btn-default">Save Change</button>
+                        <button type="submit" class="btn btn-default" id="submit" type="submit">Save Change</button>
                     </form>
                 </div>
+                <ul class="pager">
+                    <li class="previous">
+                        <a href="{{url_for('showItems', category_id = category_id )}}"><h4>Return</h4></a>
+                    </li>
+                </ul>
             </div>
         </div>
-
-            <ul class="pager">
-                <li class="previous">
-                    <a href="{{url_for('showItems', category_id = category.id )}}">Return</a>
-                </li>
-            </ul>
-</body>
-</html>
+{% endblock %}
