--- a/templates/addBook.html
+++ b/templates/addBook.html
@@ -1,39 +1,37 @@
 {% extends "main.html" %}
 {% block content %}
-        <div class="jumbotron">
+    <div class="jumbotron">
         <h1>Book Catalog</h1>
         <p>Library catalog systems</p>
-        </div>
+    </div>
 
-        <div class="well">
-            <h4 class="text-right">Login</h4>
-        </div>
+    <div class="well">
+        <h4 class="text-right">Login</h4>
+    </div>
 
-        <div class="p-5 row">
-            <div class="col-sm-1"></div>
-            <div class="col-sm-10">
-                <div class="jumbotron">
-                    <h4 class="text-left">Category:Physic</h4></br>
-                    <form action="/action_page.php">
+    <div class="p-5 row">
+        <div class="col-sm-1"></div>
+        <div class="col-sm-10">
+            <div class="jumbotron">
+                <h4 class="text-center">Category : {{category_name}} </br></h4>
+                    <form action="#" method = "post">
                         <div class="form-group">
-                            <label for="email">Book Name</label></br>
-                            <input type="email" class="form-control" id="email">
-                            <label for="email">Author</label></br>
-                            <input type="email" class="form-control" id="email">
-                            <label for="comment">Description</label>
-                            <textarea class="form-control" rows="5" id="comment"></textarea>
-                        </div>
-
-                    </br>
-                        <button type="submit" class="btn btn-default">Add Book</button>
+                            <label for="title">Title</label></br>
+                            <input type ="text" class="form-control" maxlength="150" name="name" value = "" >
+                            <label for="author">Author</label></br>
+                            <input type ="text" class="form-control" maxlength="150" name="author" value = "">
+                            <label for="description">Description</label>
+                            <textarea class="form-control" rows="5" id="comment" name="description"></textarea>
+                           </div>
+                        </br>
+                        <button type="submit" class="btn btn-default" id="submit" type="submit">Add Book</button>
                     </form>
-                </div>
             </div>
-        </div>
-
             <ul class="pager">
                 <li class="previous">
-                    <a href="{{url_for('showItems', category_id = category.id )}}"><h5>Return</h5></a>
+                    <a href="{{url_for('showItems', category_id = category_id )}}"><h4>Return</h4></a>
                 </li>
             </ul>
+        </div>
+    </div>
 {% endblock %}
