--- a/templates/editCategory.html
+++ b/templates/editCategory.html
@@ -1,32 +1,32 @@
 {% extends "main.html" %}
 {% block content %}
-        <div class="jumbotron">
+    <div class="jumbotron">
         <h1>Book Catalog</h1>
         <p>Library catalog systems</p>
-        </div>
+    </div>
 
-        <div class="well">
-            <h4 class="text-right">Login</h4>
-        </div>
+    <div class="well">
+        <h4 class="text-right">Login</h4>
+    </div>
 
-        <div class="p-5 row">
-            <div class="col-sm-1"></div>
-            <div class="col-sm-10">
-                <div class="jumbotron">
-                    <h4 class="text-center">Category : {{category_name}} </br></h4>
+    <div class="p-5 row">
+        <div class="col-sm-1"></div>
+        <div class="col-sm-10">
+            <div class="jumbotron">
+                <h4 class="text-center">Category : {{category_name}} </br></h4>
                     <form action="#" method = "post">
                         <div class="form-group">
-                            <label for="email">>Edit Name</label></br>
+                            <label for="email">Edit Name</label></br>
                             <input type ="text" class="form-control" maxlength="150" name="name" value ={{category_name}} >
                         </div></br>
                         <button type="submit" class="btn btn-default" id="submit" type="submit">Save Change</button>
                     </form>
-                </div>
-                <ul class="pager">
-                    <li class="previous">
-                        <a href="{{url_for('showItems', category_id = category_id )}}"><h4>Return</h4></a>
-                    </li>
-                </ul>
             </div>
+            <ul class="pager">
+                <li class="previous">
+                    <a href="{{url_for('showItems', category_id = category_id )}}"><h4>Return</h4></a>
+                </li>
+            </ul>
         </div>
+    </div>
 {% endblock %}
