--- a/templates/addCategory.html
+++ b/templates/addCategory.html
@@ -13,13 +13,13 @@
         <div class="col-sm-1"></div>
         <div class="col-sm-10">
             <div class="jumbotron">
-                <h4 class="text-center">New Category </br></h4>
+                <h4 class="text-center">New Category <br/></h4>
                 <form action="#" method = "post">
                     <div class="form-group">
-                        <label for="email">Category Name</label></br>
+                        <label>Category Name</label><br/>
                         <input type ="text" class="form-control" maxlength="150" name="name">
-                    </div></br>
-                    <button type="submit" class="btn btn-default" id="submit" type="submit">Submit</button>
+                    </div><br/>
+                    <button type="submit" class="btn btn-default" id="submit">Submit</button>
                 </form>
             </div>
             <ul class="pager">
