--- a/templates/editBook.html
+++ b/templates/editBook.html
@@ -13,18 +13,18 @@
         <div class="col-sm-1"></div>
         <div class="col-sm-10">
             <div class="jumbotron">
-                <h4 class="text-center">Category : {{category.name}} </br></h4>
+                <h4 class="text-center">Category : {{category.name}} <br/></h4>
                     <form action="#" method = "post">
                         <div class="form-group">
-                            <label for="title">Title</label></br>
+                            <label>Title</label><br/>
                             <input type ="text" class="form-control" maxlength="150" name="name" value = {{book.name}} >
-                            <label for="author">Author</label></br>
+                            <label>Author</label><br/>
                             <input type ="text" class="form-control" maxlength="150" name="author" value = {{book.author}}>
-                            <label for="description">Description</label>
+                            <label>Description</label>
                             <textarea class="form-control" rows="5"  name="description">{{book.description}}</textarea>
                            </div>
-                        </br>
-                        <button type="submit" class="btn btn-default" id="submit" type="submit">Save Changes</button>
+                        <br/>
+                        <button type="submit" class="btn btn-default" id="submit">Save Changes</button>
                     </form>
             </div>
             <ul class="pager">
