--- a/templates/editCategory.html
+++ b/templates/editCategory.html
@@ -13,13 +13,13 @@
         <div class="col-sm-1"></div>
         <div class="col-sm-10">
             <div class="jumbotron">
-                <h4 class="text-center">Category : {{category_name}} </br></h4>
+                <h4 class="text-center">Category : {{category_name}} <br/></h4>
                     <form action="#" method = "post">
                         <div class="form-group">
-                            <label for="email">Edit Name</label></br>
+                            <label>Edit Name</label><br/>
                             <input type ="text" class="form-control" maxlength="150" name="name" value ={{category_name}} >
-                        </div></br>
-                        <button type="submit" class="btn btn-default" id="submit" type="submit">Save Change</button>
+                        </div><br/>
+                        <button type="submit" class="btn btn-default" id="submit">Save Change</button>
                     </form>
             </div>
             <ul class="pager">
