login/disconect works

--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -12,6 +12,8 @@
     <div class="jumbotron">
         <h1>Book Catalog</h1>
         <p>Library catalog systems</p>
+        <a href="{{url_for('showLogin')}}"><h4 class="text-right">Login</h4></a>
+        <a href="{{url_for('gdisconnect')}}"><h4 class="text-right">Disconnect</h4></a>
     </div>
 
     <div class="well">
